# simpsons-finder

./: README.md  db.txt  pyproject.toml  simpsons.py
