[tool.poetry]
name = "simpsons-finder"
version = "1.0.0"
description = "A simple Python script to find episodes of Simpsons based on a search query."
authors = ["Meesha <44530786+meesha7@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
